--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,17 +17,13 @@ jobs:
         with:
           node-version: '12.x'
       - name: npm install 
-        run: npm install
-        working-directory: './redux-anecdotes'
+        run: cd redux-anecdotes && npm install
       - name: lint
-        run: npm run lint
-        working-directory: './redux-anecdotes'
+        run: cd redux-anecdotes && npm run lint
       - name: build
-        run: npm run build
-        working-directory: './redux-anecdotes'
+        run: cd redux-anecdotes && npm run build
       - name: test
-        run: npm run test
-        working-directory: './redux-anecdotes'
+        run: cd redux-anecdotes && npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
