--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,12 +25,13 @@ jobs:
       - name: build
         working-directory: './redux-anecdotes'
         run: npm run build
-      - name: test
-        working-directory: './redux-anecdotes'
-        run: npm run test
+      # - name: test
+      #   working-directory: './redux-anecdotes'
+      #   run: npm run test
       - name: e2e tests
+        working-directory: './redux-anecdotes'
         uses: cypress-io/github-action@v2
         with:
-          command: cd redux-anecdotes && npm run test:e2e
+          command: npm run test:e2e
           start: npm run server
           wait-on: http://localhost:3001
