--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,9 +29,8 @@ jobs:
       #   working-directory: './redux-anecdotes'
       #   run: npm run test
       - name: e2e tests
-        working-directory: './redux-anecdotes'
         uses: cypress-io/github-action@v2
         with:
-          command: npm run test:e2e
+          command: cd redux-anecdotes && npm run test:e2e
           start: npm run server
           wait-on: http://localhost:3001
