--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,6 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: cd redux-anecdotes && npm run test:e2e
+          command: npm run test:e2e
           start: npm run server
           wait-on: http://localhost:3001
