--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm start && npm run test:e2e
-          start: npm run server
+          command: npm run test:e2e
+          start: npm run server, npm start
           working-directory: './redux-anecdotes'
           wait-on: http://localhost:3001
